Fix visibility of text in blogbar.  #16

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -7,3 +7,6 @@ body {
   background-color: black;
   text-align: right;
 }
+.blogbar a:visited {
+  color: white;
+}
